--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "gatsby": "^4.14.1",
+    "gatsby-plugin-image": "^2.16.1",
+    "gatsby-plugin-sharp": "^4.16.1",
+    "gatsby-source-filesystem": "^4.16.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
