--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.14.1",
     "gatsby-plugin-image": "^2.16.1",
+    "gatsby-plugin-manifest": "^4.25.0",
     "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-sharp": "^4.16.1",
     "gatsby-source-filesystem": "^4.16.0",
