--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "@react-icons/all-files": "^4.1.0",
     "gatsby": "^4.14.1",
     "gatsby-plugin-image": "^2.16.1",
@@ -23,6 +27,10 @@
     "gatsby-plugin-sharp": "^4.16.1",
     "gatsby-source-filesystem": "^4.16.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "source-map": "^0.8.0-beta.0"
+  },
+  "resolutions": {
+    "source-map": "^0.8.0-beta.0"
   }
 }
